--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "lodash": "^4.17.21",
+    "pinia": "^2.0.9",
     "vue": "^3.2.16"
   },
   "devDependencies": {
@@ -19,8 +20,8 @@
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-vue": "^8.0.3",
-    "prettier": "2.4.1",
     "postcss": "^8.3.11",
+    "prettier": "2.4.1",
     "tailwindcss": "^2.2.19",
     "vite": "^2.6.4"
   }
