--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@vueuse/core": "^7.6.1",
     "lodash": "^4.17.21",
     "pinia": "^2.0.9",
     "vue": "^3.2.16"
